# andy-mcp-gateway

./: .env.example  .gitignore  Andy.Mcp.Gateway.sln  CLAUDE.md  Directory.Build.props  Dockerfile  README.md  agents.md  backend-architecture.md  docker-compose.yml
.github/workflows/: build-and-release.yml
backend/: .dockerignore  Dockerfile
backend/src/: McpGateway.sln
backend/src/McpGateway/: Program.cs  (+5 more)
client/: angular.json  package-lock.json  package.json
client/src/: auth-config.ts  styles.scss
docs/: EXCEL_IMPORT_EXPORT.md  README-Architecture.md  authentication.md  presentation.md
example/: README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-all-servers.sh
example/servers/: __init__.py  _asgi.py  sse_taskboard.py  streamable_calculator.py  streamable_knowledge.py  streamable_orders.py
examples/: README.md
examples/Andy.Mcp.Gateway.Examples/: Andy.Tools.Research.Examples.csproj  Program.cs
frontend/: Dockerfile  angular.json  docker-entrypoint.sh  nginx.conf  package.json
frontend/src/: index.html  main.ts  styles.scss
src/Andy.Mcp.Gateway/: Andy.Mcp.Gateway.csproj  Program.cs  appsettings.Development.json  servicemap.yaml
src/McpGateway/: McpGateway.csproj  McpGateway.http  McpSubPathAwareAuthenticationHandler.cs  Program.cs  README-Architecture.md  appsettings.Development.json  appsettings.json
src/McpGateway.Application/: McpGateway.Application.csproj
src/McpGateway.Domain/: McpGateway.Domain.csproj
src/McpGateway.Infrastructure/: McpGateway.Infrastructure.csproj
src/McpGateway.Tests/: McpGateway.Tests.csproj
(+217 files in other folders)
