[project]
name = "mcp-gateway-examples"
version = "0.1.0"
description = "Sample MCP servers (Streamable HTTP + SSE) for testing MCP Gateway integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.21.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers"]
